2015-03-23 S. Thiell <stephane.thiell@cea.fr>

	* Clush.py: Fix --diff against null content (ticket #214).

2015-03-19 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Make max_retcode() return None on no-op. Until now, max_retcode()
	returned 0 by default, so even when no command was able to finish (for
	example, due to reached timeout). This behavior did not allow users to
	distinguish between successful commands and such no-op.

2015-03-11 S. Thiell <stephane.thiell@cea.fr>

	* Worker.py: Introduce StreamWorker as a generic worker class to manage a
	set of streams (using one EngineClient with multiple I/O streams
	internally). It's a concrete class that is now used in Gateway.py to
	manage I/O from the parent host in tree propagation mode. Also changed
	WorkerSimple (and thus WorkerPopen) to inherit from StreamWorker.

2014-05-20 S. Thiell <stephane.thiell@cea.fr>

	* EngineClient.py: Code improvement to support multiple customizable I/O
	streams per EngineClient in different mode, each being named and having
	their own read/write buffers and attributes.

2014-04-30 A. Degremont <aurelien.degremont@cea.fr>

	* Clush.py: Add a 'worker' option to switch default worker (ticket #221).

2014-04-23 S. Thiell <stephane.thiell@cea.fr>

	* EPoll.py: Close epoll control file descriptor when engine is released.

2014-01-26 A. Degremont <aurelien.degremont@cea.fr>

	* NodeUtils.py: Add group source caching expiration (ticket #98).

2014-01-16 S. Thiell <stephane.thiell@cea.fr>

	* RangeSet.py: Multidimensional RangeSet support (new RangeSetND class).
	Created RangeSetND class to manage a matrix of RangeSet objects. Folding
	of such objects is quite complex and time consuming. A special
	optimization is provided when only one dimension is varying. Patch by
	aurelien.degremont@cea.fr and stephane.thiell@cea.fr.

	* NodeSet.py: Multidimensional nodeset support.  Added support of
	RangeSetND to NodeSet. Optimized NodeSet so that 1D NodeSet objects are